<resources>
    <string name="app_name">EazyKart</string>
    <string name="welcome">Hello</string>
    <string name="welcomeBack">Welcome Back!</string>
    <string name="sign_up">Sign Up</string>
    <string name="subTitle">Let\'s get started</string>
    <string name="signUpTitle">Create an account</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="login_link">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="enter_your_password">Password</string>
    <string name="enter_your_phone_number">Phone Number</string>
    <string name="enter_your_email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="or_with">Or With</string>
    <string name="kart">Kart</string>
    <string name="eazy">Eazy</string>
    <string name="enter_the_email_address_associated_with_your_account_and_we_ll_send_you_a_link_to_reset_your_password">Enter the email address associated with your account and we\'ll send you a link to reset your password.</string>
    <string name="email">Email</string>
    <string name="continueTxt">Continue</string>
    <string name="please_fill_in_the_required_fields">Please fill in the required fields</string>
    <string name="username_req">UserName*</string>
    <string name="password_req">Password*</string>
    <string name="password_requirements"><![CDATA[Password should contain at least 8 characters with uppercase, lowercase, special character, and number]]></string>
</resources>