<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.ForgotPasswordActivity">

        <RelativeLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/eaztTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="128dp"
                android:text="@string/eazy"
                android:textColor="@color/orange"
                android:textSize="32sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="128dp"
                android:layout_toEndOf="@id/eaztTV"
                android:text="@string/kart"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="italic" />
        </RelativeLayout>

        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:text="@string/enter_the_email_address_associated_with_your_account_and_we_ll_send_you_a_link_to_reset_your_password"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/info"
            android:layout_marginStart="18dp"
            android:layout_marginTop="28dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/email_edit_text"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/email" />

        <Button
            android:id="@+id/confirm_button"
            style="@style/RoundedButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_edit_text"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="10dp"
            android:text="@string/continueTxt"
            android:textColor="@android:color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirm_button"
            android:layout_marginTop="100dp"
            android:gravity="center">

            <TextView
                android:id="@+id/donot_have_acc_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/don_t_have_an_account"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/sign_up_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="24dp"
                android:layout_toEndOf="@id/donot_have_acc_view"
                android:text="@string/sign_up"
                android:textColor="@color/skyBlue"
                android:textSize="18sp" />
        </RelativeLayout>
    </RelativeLayout>
</layout>