<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.SignUpActivity">

        <ImageButton
            android:id="@+id/back_button_include"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="8dp"
            android:background="@android:color/transparent"
            android:padding="8dp"
            android:scaleType="fitStart"
            android:src="@drawable/back_button" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/back_button_include"
            android:layout_margin="14dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/signUpTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/signUpTitle"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/signUpSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/signUpTitle"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="20dp"
                    android:text="@string/subTitle"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/username_edit_text"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/signUpSubtitle"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/username" />

                <EditText
                    android:id="@+id/email_edit_text"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/username_edit_text"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/enter_your_email" />

                <EditText
                    android:id="@+id/phone_edit_text"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/email_edit_text"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/enter_your_phone_number" />

                <EditText
                    android:id="@+id/password_edit_text"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/phone_edit_text"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword" />
                <EditText
                    android:id="@+id/cnf_password_edit_text"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/password_edit_text"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/sign_up_button"
                    style="@style/RoundedButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cnf_password_edit_text"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/sign_up"
                    android:textColor="@android:color/white" />

                <!-- Divider Lines -->
                <RelativeLayout
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/sign_up_button"
                    android:layout_marginVertical="16dp"
                    android:gravity="center_horizontal"
                    android:paddingHorizontal="16dp">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="8dp"
                        android:layout_toStartOf="@+id/or_with_text"
                        android:background="@color/gray" />

                    <TextView
                        android:id="@+id/or_with_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginHorizontal="8dp"
                        android:gravity="center"
                        android:text="@string/or_with"
                        android:textSize="14sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="8dp"
                        android:layout_toEndOf="@+id/or_with_text"
                        android:background="@color/gray" />
                </RelativeLayout>

                <include
                    android:id="@+id/facebook_button"
                    layout="@layout/custom_fb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/google_button"
                    android:layout_margin="10dp" />

                <include
                    android:id="@+id/google_button"
                    layout="@layout/custom_google"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/divider"
                    android:layout_margin="10dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/facebook_button"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/login_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/already_have_an_account"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/login_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_toEndOf="@id/login_text"
                        android:text="@string/login_link"
                        android:textColor="@color/skyBlue"
                        android:textSize="18sp" />
                </RelativeLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</layout>